--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <!-- <script src="../javascript/weather.js"></script> -->
-    <link rel="stylesheet" href="../css/weather.css">
-    <link rel="stylesheet" href="../css/weather-daily.css">
+    <link rel="stylesheet" href="weather.css">
+    <link rel="stylesheet" href="weather-daily.css">
 
     <!-- importing fonts for css -->
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
